prusti-tests/tests/parse/ui/simple_imply.stderr
error[E0308]: mismatched types
 --> $DIR/simple_imply.rs:5:14
  |
5 | #[requires(  12345 ==> true)]
  |              ^^^^^ expected `bool`, found integer

error[E0308]: mismatched types
 --> $DIR/simple_imply.rs:8:29
  |
8 | #[requires(  true      ==>  12345 )]
  |              ----           ^^^^^ expected `bool`, found integer
  |              |
  |              expected because this is `bool`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:11:34
   |
11 | #[requires(  true  ==>  (true && 12345 && true))]
   |                          ----    ^^^^^ expected `bool`, found integer
   |                          |
   |                          expected because this is `bool`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:14:34
   |
14 | #[requires(  true  ==>  (true && 12345 ==> true))]
   |                          ----    ^^^^^ expected `bool`, found integer
   |                          |
   |                          expected because this is `bool`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:17:34
   |
17 | #[requires(  true  ==>  (true && 12345 ==> true && 12345))]
   |                          ----    ^^^^^ expected `bool`, found integer
   |                          |
   |                          expected because this is `bool`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:17:52
   |
17 | #[requires(  true  ==>  (true && 12345 ==> true && 12345))]
   |                                            ----    ^^^^^ expected `bool`, found integer
   |                                            |
   |                                            expected because this is `bool`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
